# bot-binance-api

./: .gitignore  .gitmodules  Dockerfile  README.md  app.py  configure.py  docker-compose.yml  init_app.py  init_configure.py  init_tests.py  pyproject.toml  restart_system.py  tests.py
docs/: COMMANDS.md  CONFIGURATION.md  INSTALL.md  SECURITY.md
src/: __init__.py  key_mechanism.py  main.py  system_logger.py
src/config/: __init__.py  certificate.py  check_system.py  config_api.py  config_db.py  configure.py  err.py  execute_comands.py  parser.py  restart_system.py
src/core/: __init__.py  lang.py  utils.py  utis.py
src/core/emails/: __init__.py  emails_modals.py  manager.py  utils.py
src/modals/: __init__.py
tests/: __init__.py  test_config_check_system.py  test_config_configure.py  test_config_err.py  test_config_execute_commands.py  test_config_parser.py  test_config_restart_system.py  test_key_mechanism.py  test_src.py  test_src_config_config_db.py  test_src_config_configure.py  utils.py
tests/test_config/: test_config_certificate.py  test_config_check_system.py  test_config_configure.py  test_config_err.py  test_config_execute_commands.py  test_config_parser.py  test_config_restart_system.py
tests/test_email/: test_core_email_manager.py
tests/test_src/: test_key_mechanism.py  test_src.py
