[tool.poetry]
name = "bot"
version = "0.1.0"
description = "API que conecta uma interface a um bot que realiza operações na Binance via API_KEY e API_SECRET"
authors = ["paulindavzl <paulochz01@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "src"},
]


[tool.poetry.scripts]
tests = "tests:run"
app = "app:run"
configure = "configure:run"
restart_system = "restart_system:run"


[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
pytest = "^8.3.4"
sh = "^2.1.0"
python-dotenv = "^1.0.1"
cryptography = "^44.0.0"
flask-sqlalchemy = "^3.1.1"
mysql-connector-python = "^9.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
